<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/search_artist"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_artist"/>

        <Button
            android:id="@+id/button_search_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/search"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/search_track"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_track"/>

        <Button
            android:id="@+id/button_search_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/search"/>

    </LinearLayout>

</LinearLayout>