<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
              tools:context=".SongActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/title"/>

    <TextView
        android:id="@+id/song_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        tools:text= "Believe" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/artist"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/song_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        tools:text= "Cher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/album"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/song_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        tools:text= "Album name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/genre"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/song_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        tools:text= "Pop" />


</LinearLayout>
